<resources>
    <string name="app_name">和谐家园</string>
    <string name="text1">点击登录即表示您已同意</string>
    <string name="text2">《和谐家园用户协议》</string>
    <string name="text3">输入验证码</string>
    <string name="text4">输入手机号码</string>
    <string name="text5">登录</string>
    <string name="text6">获取验证码</string>
    <string name="text7">修改手机号码</string>
    <string name="open_door">一键开门</string>
    <string name="self_pay">缴费记录</string>
    <string name="house_sale">房租租售</string>
    <string name="volun_apply">志愿者申请</string>
    <string name="submit_info">党建信息</string>
    <string name="get_help">帮帮忙</string>
    <string name="praise">表扬物业</string>
    <string name="feedback">意见反馈</string>
    <string name="home">家事</string>
    <string name="community">社区</string>
    <string name="mine">我的</string>
    <string name="report_order">报事工单</string>
    <string name="evaluate">待评价</string>
    <string name="processing">处理中</string>
    <string name="order_receiveing">待接单</string>
    <string name="work_order">全部工单</string>
    <string name="pass">通过</string>
    <string name="decline">不通过</string>
    <string name="check_room_man">验房人</string>
    <string name="phone_number">联系电话</string>
    <string name="repair_type">报事报修类型</string>
    <string name="repair_tip">请选择正确的类型，以便我们更快响应您的诉求</string>
    <string name="repair_time">（最快将在{15:00 - 16:00}为您服务）</string>
    <string name="repair_contact">报事联系人</string>
    <string name="submit">提交</string>
    <string name="repair_hint">请在此输入您遇到的问题，我们将尽快为您提供服务。</string>
    <string name="immediately">立即处理</string>
    <string name="reservation">预约处理</string>
    <string name="click_choose_time">点击选择预约时间</string>
</resources>
