<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text5"
        android:layout_marginTop="200dp"
        android:textColor="@color/color_121212"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/inputPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/phone_title"
        android:padding="15dp"
        android:drawablePadding="5dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="45dp"
        android:textSize="14sp"
        android:inputType="phone"
        android:textColor="@color/color_121212"
        android:background="@drawable/login_input_bg"
        android:hint="@string/text4"/>

    <EditText
        android:id="@+id/inputMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/inputPhone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:text="5974338250"
        android:inputType="phone"
        android:textColor="@color/color_121212"
        android:background="@drawable/login_input_bg"
        android:hint="@string/text3" />

    <TextView
        android:id="@+id/getYzm"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/inputMsg"
        app:layout_constraintBottom_toBottomOf="@id/inputMsg"
        app:layout_constraintRight_toRightOf="@id/inputMsg"
        android:text="@string/text6"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:gravity="center"
        android:enabled="false"
        android:textColor="@color/yzm_text_color"/>

    <TextView
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/inputMsg"
        app:layout_constraintRight_toRightOf="@id/inputMsg"
        app:layout_constraintTop_toBottomOf="@id/inputMsg"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="14sp"
        android:enabled="false"
        android:textColor="@color/login_text_color"
        android:background="@drawable/login_btn_bg"
        android:text="@string/text5"/>

    <LinearLayout
        android:id="@+id/bg3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/color_A0A0A0"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/color_515C6F"
            android:textSize="12sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>